Add info on the form for better UX

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -25,6 +25,9 @@
                 <div class="input-field col s12">
                     <input id="email" name="email" type="email" class="validate" required>
                     <label for="email">Email</label>
+                    <span class="helper-text valign-wrapper">
+                        <span class="material-icons">error_outline</span>Email must be unique
+                    </span>
                 </div>
             </div>
             <!-- username -->
