--- a/app/templates/update_profile.html
+++ b/app/templates/update_profile.html
@@ -26,6 +26,9 @@
                 <div class="input-field col s12">
                     <input id="email" name="email" type="email" class="validate" value="{{ user.email }}" required>
                     <label for="email">Email</label>
+                    <span class="helper-text valign-wrapper">
+                        <span class="material-icons">error_outline</span>Email must be unique
+                    </span>
                 </div>
             </div>
             <!-- username -->
