--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,9 +49,15 @@
                     <!-- Large screen navbar -->
                     <ul>
                         <div class="right hide-on-med-and-down">
-                            <li><a href="#" aria-label="Link to the Events page.">Events</a></li>
-                            <li><a href="{{ url_for('create.create_event') }}" aria-label="Link to the Creates page.">Create</a></li>
-                            <li><a href="#" aria-label="Link to the Support page.">Support</a></li>
+                            {% if session.user %}
+                                <li><a href="#" aria-label="Link to the Events page.">Events</a></li>
+                                <li><a href="{{ url_for('create.create_event', username=session['user']) }}" 
+                                    aria-label="Link to the Creates page.">Create</a></li>
+                                <li><a href="#" aria-label="Link to the Support page.">Support</a></li>
+                            {% else %}
+                                <li><a href="#" aria-label="Link to the Events page.">Events</a></li>
+                                <li><a href="#" aria-label="Link to the Support page.">Support</a></li>
+                            {% endif %}
                         </div>
                         <li class="right">
                             <a href="#" data-activates="mobile-navbar" class="dropdown-button show-on-medium-and-down hide-on-large-only" 
@@ -65,9 +71,15 @@
 
             <!-- Mobile navbar -->
             <ul class="dropdown-content mobile-dropdown" id="mobile-navbar">
-                <li><a href="#" aria-label="Link to the Events page.">Events</a></li>
-                <li><a href="{{ url_for('create.create_event') }}" aria-label="Link to the Creates page.">Create</a></li>
-                <li><a href="#" aria-label="Link to the Support page.">Support</a></li>
+                {% if session.user %}
+                    <li><a href="#" aria-label="Link to the Events page.">Events</a></li>
+                    <li><a href="{{ url_for('create.create_event', username=session['user']) }}"
+                        aria-label="Link to the Creates page.">Create</a></li>
+                    <li><a href="#" aria-label="Link to the Support page.">Support</a></li>
+                {% else %}
+                    <li><a href="#" aria-label="Link to the Events page.">Events</a></li>
+                    <li><a href="#" aria-label="Link to the Support page.">Support</a></li>
+                {% endif %}
             </ul>
         </div>
     </header>
