--- a/app/templates/create_event.html
+++ b/app/templates/create_event.html
@@ -1,76 +1,88 @@
 {% extends 'base.html' %}
 {% block heading %}
-<h2 class="blue-txt">Create an Event</h2>
+    <h2 class="blue-txt">Create an Event</h2>
 {% endblock %}
 
 {% block content %}
     <div class="row">
-        <form class="col s12 m8 offset-m2 l6 offset-l3 card-panel" method="POST" action="#">
-            <div class="row">
-                <!-- first name -->
-                <div class="input-field col s12 m6">
-                    <input id="first_name" name="first_name" type="text" class="validate" minlength="2" maxlength="20"
-                        pattern='^[a-zA-Z0-9]{2,20}$' required>
-                    <label for="first_name">First Name</label>
-                </div>
-                <!-- last name -->
-                <div class="input-field col s12 m6">
-                    <input id="last_name" name="last_name" type="text" class="validate" minlength="2" maxlength="20"
-                        pattern='^[a-zA-Z0-9"]{2,20}$' required>
-                    <label for="last_name">Last Name</label>
-                </div>
-            </div>
-            <!-- email -->
+        <form class="col s12 m8 offset-m2 l6 offset-l3 card-panel" method="POST" 
+            action="{{ url_for('create.create_event', username=session['user']) }}">
+            <!-- activity -->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="email" name="email" type="email" class="validate" required>
-                    <label for="email">Email</label>
+                    <select id="activity" name="activity" class="validate" required>
+                        <option value="" disabled selected>Choose the appropriate type</option>
+                        <option value="Playground">Playground</option>
+                        <option value="Play date">Play date</option>
+                        <option value="Cycling">Cycling</option>
+                        <option value="Hike">Hike</option>
+                        <option value="Swimming">Swimming</option>
+                        <option value="Picnic">Picnic</option>
+                        <option value="Walk">Walk</option>
+                        <option value="Coffee">Coffee</option>
+                        <option value="Other">Other</option>
+                      </select>
+                    <label for="activity">Activity</label>
                 </div>
             </div>
-            <!-- username -->
+            <!-- Location -->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="username" name="username" type="text" class="validate" minlength="2" maxlength="20"
-                        pattern='^[a-zA-Z0-9"]{2,20}$' required>
-                    <label for="last_name">Username</label>
+                    <!-- add REQUIRED !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+                    <input id="location" name="location" type="text" class="validate">
+                    <label for="location">Location</label>
                     <span class="helper-text valign-wrapper">
-                        <span class="material-icons">error_outline</span>Username is case sensitive and must be unique
+                        <span class="material-icons">travel_explore</span>Select the location via google maps
                     </span>
                 </div>
             </div>
-            <!-- password -->
+            <!-- Date -->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="password" name="password" type="password" class="validate" minlength="8" maxlength="30"
-                        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!#%*?&]{8,30}$" 
-                        autocomplete="new-password" required>
-                    <label for="password">Create Password</label>
+                    <input id="date" name="date" type="date" class="validate">
+                    <label for="date">Date</label>
+                </div>
+            </div>
+            <!-- Time -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="time" name="time" type="time" class="validate">
+                    <label for="time">Time</label>
+                </div>
+            </div>
+            <!-- Age -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="age" name="age" type="text" class="validate" 
+                        pattern="^\b([0-9]|1[0-8])\b(-)\b([0-9]|1[0-8])\b$">
+                    <label for="time">Age Range</label>
                     <span class="helper-text valign-wrapper">
                         <span class="material-icons">error_outline</span>
-                        Password must have at least 8 characters, letters (upper and lower-case),
-                        numbers and special character: <br>
-                        (@ $ ! % * # ? &)
+                        Please enter two number separated by an hyphen.<br>
+                        example: 0-1 for 0 to one year old.<br>
+                        The range goes from 0 to 18.
                     </span>
                 </div>
             </div>
-            <!-- confirm password -->
+            <!-- Description -->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="conf_password" name="conf_password" type="password" class="validate" minlength="8"
-                        maxlength="30" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!#%*?&]{8,30}$"
-                        autocomplete="new-password" required>
-                    <label for="conf_password">Confirm Password</label>
-                    <span class="helper-text valign-wrapper">
-                        <span class="material-icons">error_outline</span>Passwords must match
-                    </span>
+                  <textarea id="activity_description" name="activity_description" class="materialize-textarea"></textarea>
+                  <label for="activity_description">Description</label>
                 </div>
-            </div>
+              </div>
             <!-- Join -->
             <div class="row">
                 <div class="col12 center-align">
-                    <button class="btn waves-effect waves-light blue-bg white-txt submit-btn" type="submit">Join</button>
+                    <button class="btn waves-effect waves-light blue-bg white-txt submit-btn" type="submit">Create</button>
+                    <a href="{{ url_for('index.home') }}" 
+                        class="btn waves-effect waves-light red-bg white-txt cancel-btn">Cancel</a>
                 </div>
             </div>
         </form>
     </div>
+{% endblock %}
+
+{% block scripts %}
+    <script src="{{ url_for('static', filename='js/scripts/create.js') }}"></script>
 {% endblock %}
