--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -22,7 +22,7 @@
         <div class="col s12 l4">
             <div class="card-panel orange-bg home-cards valign-wrapper hoverable">
                 {% if session.user %}
-                    <a href="{{ url_for('create.create_event', username=session['user']) }}" class="black-txt centered">
+                    <a href="{{ url_for('events.create_event', username=session['user']) }}" class="black-txt centered">
                         <h2 class="home-card-headings center-align text-shadow">Create</h2>
                         <p class="home-card-txt center-align">
                             Make an Event of your own in a few steps<br>
