--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,12 +50,12 @@
                     <ul>
                         <div class="right hide-on-med-and-down">
                             {% if session.user %}
-                                <li><a href="#" aria-label="Link to the Events page.">Events</a></li>
+                                <li><a href="{{ url_for('events.browse_events') }}" aria-label="Link to the Events page.">Events</a></li>
                                 <li><a href="{{ url_for('events.create_event', username=session['user']) }}" 
                                     aria-label="Link to the Creates page.">Create</a></li>
                                 <li><a href="#" aria-label="Link to the Support page.">Support</a></li>
                             {% else %}
-                                <li><a href="#" aria-label="Link to the Events page.">Events</a></li>
+                                <li><a href="{{ url_for('events.browse_events') }}" aria-label="Link to the Events page.">Events</a></li>
                                 <li><a href="#" aria-label="Link to the Support page.">Support</a></li>
                             {% endif %}
                         </div>
@@ -72,12 +72,12 @@
             <!-- Mobile navbar -->
             <ul class="dropdown-content mobile-dropdown" id="mobile-navbar">
                 {% if session.user %}
-                    <li><a href="#" aria-label="Link to the Events page.">Events</a></li>
+                    <li><a href="{{ url_for('events.browse_events') }}" aria-label="Link to the Events page.">Events</a></li>
                     <li><a href="{{ url_for('events.create_event', username=session['user']) }}"
                         aria-label="Link to the Creates page.">Create</a></li>
                     <li><a href="#" aria-label="Link to the Support page.">Support</a></li>
                 {% else %}
-                    <li><a href="#" aria-label="Link to the Events page.">Events</a></li>
+                    <li><a href="{{ url_for('events.browse_events') }}" aria-label="Link to the Events page.">Events</a></li>
                     <li><a href="#" aria-label="Link to the Support page.">Support</a></li>
                 {% endif %}
             </ul>
