--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,7 +10,7 @@
         <!-- Events -->
         <div class="col s12 l4">
             <div class="card-panel yellow-bg home-cards valign-wrapper hoverable">
-                <a href="#" class="black-txt centered">
+                <a href="{{ url_for('events.browse_events') }}" class="black-txt centered">
                     <h2 class="home-card-headings center-align text-shadow">Events</h2>
                     <p class="home-card-txt center-align">
                         Brows Events and Join to Participate
